samples/_failures_safe/1761535649_f4a8fa_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_39a5490d.c: In function ‘main’:
./samples/SAFE/__tmp_39a5490d.c:159:12: error: missing terminating " character
  159 |     printf("De
      |            ^~~
./samples/SAFE/__tmp_39a5490d.c:159:5: error: expected expression at end of input
  159 |     printf("De
      |     ^~~~~~
./samples/SAFE/__tmp_39a5490d.c:159:5: error: expected declaration or statement at end of input
